# sap

./: CMakeLists.txt  LICENSE
cat/: CMakeLists.txt  read.hpp  read_cpu.cpp  the_catalogue.cpp  the_catalogue.hpp
cat/mod/: read.mod
mod/: read.mod
src/: a.out  adi  adi.cpp  adi.hpp  adi.ipynb  adi.py  common.hpp  diff.hpp  grid.hpp  init.hpp  integrate.hpp  mrf.cpp  out-xy-0.000000.csv  out-xy-0.010000.csv  out-xy-0.020000.csv  out-xy-0.030000.csv  out-xy-0.040000.csv  out-xy-0.050000.csv  out-xy-0.060000.csv  out-xy-0.070000.csv  out-xy-0.080000.csv  out-xy-0.090000.csv  out-xz-0.010000.csv  out-xz-0.020000.csv  out-xz-0.030000.csv  out-xz-0.040000.csv  out-xz-0.050000.csv  out-xz-0.060000.csv  out-xz-0.070000.csv  out-xz-0.080000.csv  out-xz-0.090000.csv  out-yz-0.010000.csv  out-yz-0.020000.csv  out-yz-0.030000.csv  out-yz-0.040000.csv  out-yz-0.050000.csv  out-yz-0.060000.csv  out-yz-0.070000.csv  out-yz-0.080000.csv  out-yz-0.090000.csv  (+6 more)
src/.ipynb_checkpoints/: adi-checkpoint.ipynb  u_final_z000-checkpoint.csv
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/adi.dSYM/Contents/Resources/DWARF/: adi
src/adi.dSYM/Contents/Resources/Relocations/aarch64/: adi.yml
src/share.dSYM/Contents/Resources/DWARF/: share
src/share.dSYM/Contents/Resources/Relocations/aarch64/: share.yml
